# robot-trace

./: .gitignore  .pre-commit-config.yaml  CLIProgress.py  CONTRIBUTING.md  README.md  pyproject.toml
CLIProgress/: CLIProgress.py  __init__.py  runner.py
robot_trace/: RobotTrace.py  __init__.py  runner.py
testcases/: if_else_test.robot  nested_keywords.robot  suite_1.robot  suite_2.robot  suite_setup_failing.robot  suite_setup_passing.robot  suite_teardown_failing.robot  suite_teardown_passing.robot
tests/minimal_testcases/: basic_failing.robot  basic_failing.trace.normal  basic_failing.trace.verbose  basic_passing.robot  basic_passing.trace.verbose  basic_skipping.robot  basic_skipping.trace.normal  basic_skipping.trace.verbose  for_failing.robot  for_failing.trace.normal  for_failing.trace.rf6.normal  for_failing.trace.rf6.verbose  for_failing.trace.verbose  for_passing.robot  for_passing.trace.verbose  if_else_failing.robot  if_else_failing.trace.normal  if_else_failing.trace.verbose  if_else_passing.robot  if_else_passing.trace.verbose  invalid_syntax.robot  invalid_syntax.trace.normal  invalid_syntax.trace.rf6 verbose  invalid_syntax.trace.rf6.normal  invalid_syntax.trace.verbose  log_console.robot  log_console.trace.normal  log_console.trace.verbose  log_debug.robot  log_debug.trace.verbose  log_error.robot  log_error.trace.normal  log_error.trace.verbose  log_multiline.robot  log_multiline.trace.verbose  log_warning.robot  log_warning.trace.normal  log_warning.trace.verbose  multiple_2failing.trace.normal  multiple_2failing.trace.verbose  (+65 more)
tests/system/: common.resource  minimal_testcases.robot  runner.robot
tests/unit/: test_cliprogress.py
