[project]
name = "robotframework-cliprogress"
version = "0.1.0"
description = "CLI progress listener for Robot Framework"
authors = [{ name = "Jonathan Simmonds", email = "jon@jonsim.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["robotframework", "pre-commit", "coverage"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
robot-cli = "CLIProgress.runner:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.robocop.lint.per_file_ignores]
"tests/minimal_testcases/*" = ["DOC01", "DOC02", "DOC03", "DOC04"]
"tests/minimal_testcases/invalid_syntax.robot" = ["MISC08"]

[tool.robocop.format]
select = ["AlignTemplatedTestCases"]
