[project]
name = "robotframework-trace"
version = "1.0.4"
description = "Alternative CLI for Robot Framework"
readme = "README.md"
authors = [{ name = "Jonathan Simmonds", email = "jon@jonsim.com" }]
keywords = ["robotframework", "listener", "cli", "trace"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/jonsim/robot-trace"
Repository = "https://github.com/jonsim/robot-trace.git"
Issues = "https://github.com/jonsim/robot-trace/issues"

[project.optional-dependencies]
dev = ["robotframework", "pre-commit", "coverage", "build", "twine"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
robot-trace = "robot_trace.runner:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.robocop.lint]
# In order to support older RobotFramework versions we deliberately use
# deprecated keywords (in this case, VAR).
ignore = ["VAR05", "DEPR05"]
configure = [
    "too-many-calls-in-keyword.max_calls=20"
]

[tool.robocop.lint.per_file_ignores]
"tests/minimal_testcases/*" = ["DOC01", "DOC02", "DOC03", "DOC04"]
"tests/minimal_testcases/invalid_syntax.robot" = ["MISC08"]

[tool.robocop.format]
select = ["AlignTemplatedTestCases"]
